# kiki_chain

./: .flutter-plugins  .flutter-plugins-dependencies  README.md  pubspec.yaml
kiki_server/: Cargo.toml  README.md  TESTING_GUIDE.md
kiki_server/backend/: .env.production  Dockerfile  build_and_deploy.sh  docker-compose.yml  nginx.conf  云上传文档_20250813.md  部署文档_20250813.md
kiki_server/config/: development.toml  pre-release.toml  production.toml
kiki_server/doc/: assignment_optimization_report.md  架构_概要_20250806.md
kiki_server/doc/analysis/: TEACHER_SERVICE_MISSING_ANALYSIS.md
kiki_server/doc/business/: project.md  登录_业务逻辑_20250827.md
kiki_server/doc/dev/: development_guide.md  user_query_feature_development_guide.md
kiki_server/doc/development/: 开发方法引用文档.md
kiki_server/doc/features/: dify_api_key_实现指南_20250310.md  学生记录作业功能_实现指南_20250913.md  老师查看学生作业信息_实现指南_20240914.md
kiki_server/doc/framework/: latest_ddd_architecture_2025.md  功能库引用文档.md
kiki_server/doc/optimization/: 日志重复问题分析和优化.md
kiki_server/doc/prompt/: base_document_prompt.md  base_prompt_summer.md  doc_docker_prompt.md  doc_docker_prompt_ai.md  doc_framework_api_path.md  doc_framework_check_prompt.md  doc_framework_out_prompt.md  prompt_summer_1.md
kiki_server/doc/sql/: 00-create-all-tables.sql
kiki_server/scripts/: server_auto_deploy.sh
kiki_server/src/: lib.rs  main.rs
kiki_server/src/app/: api_paths.rs  (+2 more)
kiki_server/tests/: API_TEST_GUIDE.md  README.md  TEACHER_ASSIGNMENT_API_TEST_REPORT.md  api_test.sh  new_api_test.sh  quick_teacher_api_check.sh  teacher_assignment_api_test.sh
(+323 files in other folders)
