[package]
name = "qiqimanyou_server"
version = "0.1.0"
edition = "2021"

[dependencies]
# axum - 升级到最新版本 0.8.4
axum = { version = "0.8.4", features = ["macros"] }
tokio = { version = "1.39.1", features = ["full"] }

# serde
serde = { version = "1.0.206", features = ["derive"] }
serde_json = "1.0.123"
serde_with = "3.9.0"

# hyper
hyper = "1.4.0"
httpc-test = "0.1.9"
http-body = "1.0.0"

# tower
tower = "0.4.13"
tower-http = { version = "0.6.1", features = ["fs", "trace", "cors", "timeout"] }
tower-cookies = "0.10.0"

# tracing
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "chrono", "json"] }

# data
sqlx = { version = "0.8.1", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate", "bigdecimal"] }

# async
async-trait = "0.1.81"

# error handling
thiserror = "1.0.63"
anyhow = "1.0.86"

# authentication
bcrypt = "0.15.1"
jsonwebtoken = "9.2.0"

# time
chrono = { version = "0.4.38", features = ["serde"] }

# encoding
base64 = "0.22.1"

# configuration
config = "0.14.0"
toml = "0.8.8"
dotenvy = "0.15.7"

# other
lazy-regex = "3.3.0"
regex = "1.10.0"
strum_macros = "0.26.4"
uuid = { version = "1.4.0", features = ["v4", "fast-rng", "serde"] }
bytes = "1.10.1"
bigdecimal = "0.4.8"

# 强制使用兼容版本避免edition2024问题
[dependencies.base64ct]
version = "=1.6.0"
